# SoWMods

./: .gitignore  .gitignore-template  0x1411ac828  README.md  SoWMods.code-workspace
.claude/: settings.json
.claude/hooks/: auto-commit.ps1
.codex/: hooks.json
.codex/hooks/: auto-commit.ps1
HagIPC/: CMakeLists.txt  CMakePresets.json  README.md  build.ps1  vcpkg.json
HagIPC/src/: Config.cpp  Config.h  HagIPCExport.cpp  Log.cpp  Log.h  Offsets.h  PCH.h  dllmain.cpp
HagIPC/src/ipc/: CallExec.cpp  CallExec.h  HookProbe.cpp  HookProbe.h  MemAccess.cpp  MemAccess.h  MemScan.cpp  MemScan.h  MonitorProbe.cpp  MonitorProbe.h  Server.cpp  Server.h  WatchProbe.cpp  WatchProbe.h
HagIPC/tools/: hagipc.ps1  inject.ps1
HagOverlay/: App.xaml  App.xaml.cs  HagOverlay.csproj  MainWindow.xaml  MainWindow.xaml.cs  README.md  app.manifest  build.ps1
HagOverlay/web/: index.html
SoWLoader/: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  build.ps1  deploy.ps1  restore.ps1  vcpkg.json
SoWLoader/src/: Config.cpp  Config.h  Console.cpp  Console.h  GameHooks.cpp  GameHooks.h  GameTaskQueue.cpp  GameTaskQueue.h  HagApiExport.cpp  HagUI.cpp  HagUI.h  Loader.cpp  Loader.h  Log.cpp  Log.h  ModManager.cpp  ModManager.h  Overlay.cpp  Overlay.h  PCH.h  Tracer.cpp  Tracer.h  WindowWatch.cpp  WindowWatch.h  dllmain.cpp  exports_forward.h
docs/: reverse-engineering.md
mods/: build_mods.ps1
mods/InventoryEditor/: CMakeLists.txt  InventoryEditor.catalog
mods/InventoryEditor/src/: InventoryEditor.cpp
mods/SampleMod/: CMakeLists.txt
mods/SampleMod/src/: SampleMod.cpp
shared/: GameOffsets.h  HagUIAPI.h  README.md  SoWModAPI.h
tools/: analyze_sow.ps1  click_window.ps1  extract_sow_items.py  make_test_swf.py  screenshot_window.ps1  send_keys_window.ps1  sow_load_save.ps1  sow_return_to_main_menu.ps1  sowhooks.example.txt
tools/ghidra-scripts/: BuildXref.java  ClassOf.java  DataRefs.java  DecompLong.java  DecompileFuncs.java  Disasm.java  DisasmMany.java  DisassemblePdata.java  DisassemblePdata2.java  DisassemblePdata3.java  DumpRefs.java  DumpUI.java  FindCallers.java  FindImport.java  FindOffsetRef.java  FindPtr.java  FindStr.java  FindXrefs.java  Probe2.java  ProbeDisasm.java  ProbeOne.java  ProbeRefs.java  RTTI.java  Trace.java  VtableDump.java  run_ghidra.ps1
tools/sow_catalog/: armor.txt  catalog.md  gear.json  gear.txt  geartag.txt  gem.txt  rune.txt  runegem.txt  weapon.txt
